[package]
name = "udv"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"  # 

# SQLX: 异步数据库驱动
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "chrono", "tls-rustls"] }

# 环境变量管理
dotenvy = "0.15"
#关联mysql的时间类型
chrono = { version = "0.4", features = ["serde"] }

#实现webSocket
actix-web-actors = "4" # 新增：用于处理 WebSocket
actix = "0.13"         # Actix 的 Actor 系统核心
lazy_static = "1.4"
actix-cors = "0.7.1"
